...
                        .keyboardType(.numberPad)
                        .multilineTextAlignment(.center)
                        .font(Font.system(size: 30).bold())
                        .font(.title)
                        .foregroundColor(Color.emphasisColor)
                        .padding()
                        .accessibility(identifier: "amountTextField")
                    ExDivider()
                    Text("Final Amount: \(viewModelx.costSymbol(costSym: c2)) \(text.value) ")
                    //Text("Final Amount: \(c2) \(viewModelx.conversion_result) ")
                        .foregroundColor(Color.textColor)
                        .padding()
                    Spacer()
...
                        }
                        //exchangeShow.toggle()
                        //viewModelx.fetchDatax(c1: c1, c2: c2, amo: 100)
                    
                    } label: {
                        GenericButton(buttonTitle: LocaleKeys.Button.exchange.rawValue)
                    }.accessibility(identifier: "exchangeTaskButton")
                    Spacer()
                    
                }.background(self.exchangeShow ? Color.black.opacity(0.5) : Color.white)
            }
            
            
...
