...
                }
            }.frame(width: UIScreen.main.bounds.width - 50, height: 200)
                .background(Color.white)
                .cornerRadius(12)
                .clipped()
                .padding()
                .navigationTitle("Warning View")
        }*/
        
        
        VStack {
            Text(LocaleKeys.Title.confirmOperation.rawValue.locale()).bold()
                .padding()
...
